2009-01-22  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
	(print_zero_threads): New debug function.

2009-01-22  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-cc-interp-jvmti.patch: Reenable thread signalling.

2009-01-21  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-awt-window-size.patch: Update patch.

2009-01-21  Omair Majid  <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioClip.java: 
	Remove unused variables volume and muted.
	(PulseAudioClip): Remove variable volume.
	(open): Remove muteControl, volume and muted.
	(native_setVolume): Rename to native_set_volume.
	(native_update_volume): New function.
	(isMuted): Remove.
	(setMuted): Remove.
	(setVolume): Rename to setCachedVolume.
	(getVolume): Rename to getCachedVolume.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMuteControl.java:
	Remove file. Mute relied on chaning the volume only through the api. That
	assumption is invalid as the user can change volume through pulseaudio's
	controls.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioPlaybackLine.java
	(isMuted): Remove.
	(setMuted): Remove.
	(native_setVolume): Rename to native_set_volume.
	(native_update_volume): New function.
	(getVolume): Rename to getCachedVolume.
	(setVolume): Rename to setCachedVolume.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioPort.java:
	Remove muted and muteControl. Rename volume to cachedVolume. 
	(PulseAudioPort): Remove muteControl.
	(isMuted): Remove function.
	(setMuted): Remove.
	(native_setVolume): Rename to native_set_volume.
	(native_updateVolumeInfo): Rename to native_update_volume.
	(setVolume): Rename to setCachedVolume.
	(getVolume): Rename to getCachedVolume.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java:
	Remove muteControl, muted and volume.
	(open): Remove muteControl.